# yare-engine

./: .gitignore  CMakeLists.txt  README.md
assets/: map.map
codeblocks/: yare-engine.cbp
src/: assetmanager.cpp  assetmanager.h  color.h  definitions.h  eventhandler.h  font.h  label.cpp  label.h  main.cpp  map.cpp  map.h  player.cpp  player.h  rect.h  renderer.h  scene.cpp  scene.h  texture.h
src/sdl/: sdleventhandler.cpp  sdleventhandler.h  sdlfont.cpp  sdlfont.h  sdlrenderer.cpp  sdlrenderer.h  sdltexture.cpp  sdltexture.h
